--- a/src/Navigation/styles/navigation.scss
+++ b/src/Navigation/styles/navigation.scss
@@ -54,8 +54,11 @@
     position: fixed;
     right: 10%;
     top: 5%;
+    border: 2px solid $orange;
+    padding: 2px 6px;
+    background-color: rgba($cream, 0.5);
     & > div {
-      width: 30px;
+      width: 25px;
       height: 2px;
       margin: 6px 0;
       background-color: black;
